<resources>
    <string name="app_name">HW3</string>

    <string name="details_camera_title">Camera</string>
    <string name="details_camera_default">NIKON D3200</string>

    <string name="details_aperture_title">Aperture</string>
    <string name="details_aperture_default">f/5.0</string>

    <string name="details_focal_title">Focal Length</string>
    <string name="details_focal_default">18.0mm</string>

    <string name="details_shutter_title">Shutter Speed</string>
    <string name="details_shutter_default">1/125s</string>

    <string name="details_iso_title">ISO</string>
    <string name="details_iso_default">100</string>

    <string name="details_dimensions_title">Dimensions</string>
    <string name="details_dimensions_default">3906 x 4882</string>

    <string name="details_views_title">Views</string>
    <string name="details_views_default">8.8M</string>

    <string name="details_downloads_title">Downloads</string>
    <string name="details_downloads_default">99.1K</string>

    <string name="details_likes_title">Likes</string>
    <string name="details_likes_default">1.8K</string>

    <string name="description_image_preview">Preview image</string>
    <string name="description_android">Android logo</string>
    <string name="description_kotlin">Kotlin logo</string>
    <string name="description_icon_save" />
    <string name="description_icon_heart" />
    <string name="description_avatar" />
    <string name="description_icon_pin" />
    <string name="description_icon_comment" />
</resources>