<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bcn_la_sagrada_familia"
            android:scaleType="centerCrop"
            android:contentDescription="@string/description_image_preview" />

        <!-- Pin icon and location text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:id="@+id/icon_pin"
                android:layout_width="30dp"
                android:layout_height="26dp"
                android:contentDescription="@string/description_icon_pin"
                android:src="@drawable/ic_pin" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Barcelona, Spain"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Avatar -->
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/avatar"
                android:scaleType="centerCrop"
                android:contentDescription="@string/description_avatar"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" />

            <!-- Username -->
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Biel Morro"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium" />

            <!-- Three icons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="end">

                <ImageView
                    android:id="@+id/icon_save"
                    android:layout_width="29dp"
                    android:layout_height="28dp"
                    android:contentDescription="@string/description_icon_save"
                    android:src="@drawable/ic_save" />

                <ImageView
                    android:id="@+id/icon_heart"
                    android:layout_width="29dp"
                    android:layout_height="28dp"
                    android:contentDescription="@string/description_icon_heart"
                    android:src="@drawable/ic_heart" />

                <ImageView
                    android:id="@+id/icon_comment"
                    android:layout_width="29dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/description_icon_comment"
                    android:src="@drawable/ic_comment" />
            </LinearLayout>
        </LinearLayout>

        <!-- Existing content for camera details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Camera -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_camera_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_camera_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light" />
            </LinearLayout>

            <!-- Aperture -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_aperture_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_aperture_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Focal Length -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_focal_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_focal_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light" />
            </LinearLayout>

            <!-- Shutter Speed -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_shutter_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_shutter_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- ISO -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_iso_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_iso_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light" />
            </LinearLayout>

            <!-- Dimensions -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_dimensions_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_dimensions_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/background_light" />

        <include layout="@layout/image_info" />

        <!-- Add two oval buttons at the bottom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/button_barcelona"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_oval_background"
                android:text="Barcelona"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_spain"
                android:layout_width="121dp"
                android:layout_height="36dp"
                android:background="@drawable/button_oval_background"
                android:text="Spain"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
